src/test/ui/unknown-tool-name.stderr
error[E0433]: failed to resolve: use of undeclared type or module `foo`
  --> $DIR/unknown-tool-name.rs:1:3
   |
LL | #[foo::bar]
   |   ^^^ use of undeclared type or module `foo`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0433`.
